--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "portfolio2",
+  "name": "final",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -9,9 +9,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
-    "react-scripts": "^5.0.1",
-    "sass": "^1.55.0",
-    "scss": "^0.2.4",
+    "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
